--- a/css/landing.scss
+++ b/css/landing.scss
@@ -65,7 +65,7 @@ h2.primary__heading {
 
 .primary__text {
   margin: 1rem 0;
-  padding: 1rem;
+  padding: 1rem 2.188rem;
   font-size: 14px;
   font-weight: 300;
   font-style: normal;
@@ -73,6 +73,7 @@ h2.primary__heading {
   line-height: 1.43;
   letter-spacing: 0.4px;
   color: #000000;
+  text-align: center;
 
   &.primary__text--desktop {
     display: none;
@@ -183,6 +184,22 @@ h2.primary__heading {
   float: left;
 }
 
+.landing-row__featured__text {
+  margin: 1rem 0;
+  padding: 0 2.188rem 2.188rem;
+  font-size: 14px;
+  font-weight: 300;
+  font-style: normal;
+  font-stretch: normal;
+  line-height: 1.43;
+  letter-spacing: 0.4px;
+  color: #000000;
+  text-align: center;
+
+  &.landing-row__featured__text--desktop {
+    display: none;
+  }
+}
 
 @media only screen and (min-width: 950px) {
 
@@ -250,7 +267,18 @@ h2.primary__heading {
       font-weight: 300;
       font-size: 1rem;
       margin: 0;
-      padding-top: 2.188rem;
+      line-height: 1.5;
+    }
+  }
+
+  .landing-row__featured__text {
+    display: none;
+
+    &.landing-row__featured__text--desktop {
+      display: block;
+      font-weight: 300;
+      font-size: 1rem;
+      margin: 0;
       line-height: 1.5;
     }
   }
